# compiladores2023

./: .editorconfig  .gitignore  .hlint.yaml  Makefile  a.out  compiladores2023.cabal  fourmolu.yaml  lalala.c  shell.nix  testing.mk  weeder.toml
Tareas/: 01.SintaxisSugar
src/: ByteCompile.hs  C.hs  CEK.hs  ClosureConvert.hs  Common.hs  Core.hs  Elab.hs  Errors.hs  Eval.hs  Global.hs  IR.hs  Kedi.hs  Lang.hs  Main.hs  MonadFD4.hs  Optimizer.hs  PPrint.hs  Parse.hs  Scaffolding.hs  Subst.hs  Surf.hs  TypeChecker.hs  analisisTestCases.hs  test
tests/: Tests de bcc y run.txt  oldTests.txt
tests/analizando/: 001-print.fd4.out  100-orden-print.fd4.out  130-sumaFactorial-5.fd4  130-sumaFactorial-5.fd4.out  700-cc.fd4  analisis.txt
tests/ok/00-basicos/: 005-let.bc32  005-let.fd4  010-funPrint.fd4  100-orden-print.bc32  100-orden-print.fd4  101-print.bc32  101-print.fd4  200-seq.bc32  200-seq.fd4  201-seq.bc32  201-seq.fd4  201-seq.fd4.out  300-fun.fd4  400-ifz-sin-print.bc32  400-ifz-sin-print.fd4  405-ifz-con-print.bc32  405-ifz-con-print.fd4  410-ifz-orden-print.bc32  410-ifz-orden-print.fd4  410-ifz-orden-print.fd4.out  415-ifz-global.bc32  415-ifz-global.fd4  500-application.bc32  500-application.fd4  500-application.fd4.out  700-cc.fd4  700-cc.fd4.out
tests/ok/10-sugar/: 102-ifz.fd4  102-ifz.fd4.out  105-letfun-term.bc32  105-letfun-term.fd4  105-letfun-term.fd4.out  120-letSinParens.bc32  120-letSinParens.fd4  120-letSinParens.fd4.out  122-letAmigable.bc32  122-letAmigable.fd4  122-letAmigable.fd4.out  125-multiArgs.bc32  125-multiArgs.fd4  125-multiArgs.fd4.out  130-factorial-5.fd4  130-sumaFactorial-5.bc32  130-sumaFactorial-5.fd4  130-sumaFactorial-5.fd4.out  131-sumConFix.bc32  131-sumConFix.fd4  131-sumConFix.fd4.out  132-sum.bc32  132-sum.fd4  132-sum.fd4.out  133-producto.bc32  133-producto.fd4  133-producto.fd4.out  135-factorial.bc32  135-factorial.fd4  135-factorial.fd4.out  136-factorial.fd4  (+10 more)
vm/: Makefile  macc.c
(+4 files in other folders)
