cabal-version:      2.4
name:               compiladores2023
version:            0.1.0.2023

-- A short (one-line) description of the package.
synopsis:           Código fuente para la materia Compiladores (FCEIA/UNR)

-- A longer description of the package.
-- description:

homepage:           https://github.com/compiladores-lcc/compiladores#readme
bug-reports:        https://github.com/compiladores-lcc/compiladores/issues
author:             Mauro Jaskelioff y Guido Martinez
maintainer:         mauro@fceia.unr.edu.ar
copyright:          2020 Mauro Jaskelioff y Guido Martinez
license-file:       LICENSE

-- category:
extra-source-files:
  ChangeLog.md
  README.md



executable compiladores2023
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    ByteCompile
    Optimizer
    CEK
    Common
    Core
    Elab
    Errors
    Eval
    Global
    MonadFD4
    Parse
    PPrint
    Scaffolding
    Subst
    Surf
    TypeChecker
    IR
    ClosureConvert
    
  
  hs-source-dirs:     src

  default-language:   GHC2021

  ghc-options:
    -haddock -threaded -rtsopts -with-rtsopts=-N -fwarn-tabs
    -fwarn-unused-imports -fwarn-missing-signatures
    -fwarn-name-shadowing -fwarn-incomplete-patterns -fwrite-ide-info

  default-extensions:
    LambdaCase
    NamedWildCards
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards
    TupleSections

  other-extensions:
    PatternSynonyms
    GADTs

  build-depends:
    , base                         >=4.17
    , binary
    , bytestring
    , composition
    , data-default
    , data-default-generics
    , exceptions
    , extra
    , filepath
    , haskeline
    , mtl
    , optparse-applicative
    , parsec
    , pretty
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
